# Smart-project-tracking-assistant

./: .gitignore  PROJECT_STATUS.md  package.json  pnpm-lock.yaml
backend/: .gitignore  README.md  agent.py  pyproject.toml  requirements.txt
backend/.adk/: session.db
backend/app/: config.py  main.py
backend/app/agents/: risk_agent.py  root_agent.py  sprint_agent.py  task_agent.py  workload_agent.py
backend/app/agents/.adk/: session.db
backend/app/database/: connection.py  models.py
backend/app/middleware/: auth.py
backend/app/routers/: __init__.py  ai.py  auth.py  dashboard.py  projects.py  risks.py  sprints.py  tasks.py  users.py
backend/app/schemas/: ai.py  project.py  risk.py  sprint.py  task.py  user.py
backend/app/services/: adk_service.py  ai_service.py  auth_service.py  dashboard_service.py  project_service.py  risk_service.py  sprint_service.py  task_service.py  user_service.py
backend/app/utils/: helpers.py  security.py
backend/tests/: test_ai_service.py
frontend/: components.json  globals.css  index.html  package-lock.json  package.json  pnpm-lock.yaml  themes.css  verify.mjs  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  routes.tsx
frontend/src/components/: AvatarDropDown.tsx  Navbar.tsx  ProtectedRoute.tsx  RiskAnalysisForm.tsx  RiskAnalysisResult.tsx  RiskCard.tsx  SavedSprintCard.tsx  SavedSprintsList.tsx  Sidebar.tsx  SprintCard.tsx  SprintPlanResult.tsx  SprintPlannerForm.tsx  SprintPlanningLoading.tsx  TaskCard.tsx  TaskEstimationForm.tsx  TaskEstimationResult.tsx  ThemeSelector.tsx  (+2 more)
(+38 files in other folders)
