[project]
name = "smart-project-management-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "google-generativeai>=0.8.6",
    "mysql-connector-python>=9.7.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.49.0",
]
